Add MainFooter component and custom 404 page
- Implemented MainFooter component with social media icons and description for Trail Valle de Arbas.
- Created a custom 404 page with a gradient background, styled text, and a button to return to the homepage.

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,9 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "cleanUrls": true,
+    "trailingSlash": false,
+    "error": "/404/index.html"
   }
 }
