Refactor code structure for improved readability and maintainability

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
+        "Alceo",
+        "arbas",
         "Arbas",
         "Babia",
         "Bernesga",
+        "Categorias",
+        "cuencha",
         "tailwindcss"
     ]
 }
