--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,33 @@
 {
     "cSpell.words": [
         "Alceo",
+        "ALSA",
+        "antioficial",
         "arbas",
         "Arbas",
+        "Aronga",
+        "autocaravanas",
         "Babia",
         "Bernesga",
+        "Bogadera",
+        "Brazosa",
         "Categorias",
         "cuencha",
-        "tailwindcss"
+        "desvertical",
+        "Desvertical",
+        "Entrepeñas",
+        "Ezequiel",
+        "ferrata",
+        "Ferrata",
+        "Ferreras",
+        "Fontañán",
+        "Fontún",
+        "Golpejar",
+        "Gordón",
+        "Guheko",
+        "Inscríbete",
+        "Poladura",
+        "tailwindcss",
+        "Villamanín"
     ]
 }
