--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Build with Astro
         run: npm run build
 
+      - name: Add CNAME for custom domain
+        run: echo "vallearbas.es" > dist/CNAME
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
@@ -38,6 +41,9 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      pages: write
+      id-token: write
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
